# competitor_spy

./: .gitignore  00_INTERACTION_GUARDRAILS.md  01_DECISION_POLICY.md  02_WORKFLOW_STAGES.md  03_TEAM_MODEL_HANDOFFS.md  04_PERSONA_DIRECTORY.md  05_IDLE_AUTOMATION.md  06_COMMAND_CHAIN_AND_PERSONALITY.md  07_QUALITY_DIMENSIONS.md  CHANGELOG.md  Cargo.toml  DELIVERABLES_MANIFEST.md  FORMAL_SPEC.md  GETTING_STARTED.md  GOVERNANCE_MODE.md  IMPLEMENTATION_CHRONICLE.md  POST_RELEASE_MONITORING.md  PROJECT_BRIEF.md  README.md  RELEASE_CHECKLIST.md  RUNBOOK_KNOWN_FAILURES.md  TASK_LIST.md  easter_egg_categories.txt  easter_egg_quotes.json  easter_egg_quotes_batch1.json  initial_prompt.md  memory.md  prompts.md  test_out.txt  tmp_cred_out.txt
.github/: copilot-instructions.md
.github/agents/: meta-prompter.agent.md
agents/: AGENT_TEMPLATE.md  backend-specialist-variant.md  brownfield-behavior-baseline-analyst.md  brownfield-incremental-rewrite-planner.md  brownfield-parity-test-engineer.md  c-systems-implementer.md  cli-specialist-variant.md  database-specialist-variant.md  defensive-programming-specialist-variant.md  go-backend-implementer.md  greenfield-domain-discovery-expert.md  greenfield-evolution-architect.md  greenfield-formal-spec-author.md  human-spec-writer.md  javascript-legacy-migration-specialist.md  kotlin-jvm-implementer.md  maintainability-reviewer.md  meta-prompter.md  powershell-automation-engineer.md  property-based-test-engineer.md  python-backend-specialist.md  python-cli-specialist.md  python-database-specialist.md  python-defensive-programming-specialist.md  readability-reviewer.md  refactoring-steward.md  rust-api-contract-serialization-specialist.md  rust-api-ergonomics-reviewer.md  rust-async-concurrency-reliability-specialist.md  rust-backend-specialist.md  rust-cli-specialist.md  rust-database-specialist.md  rust-defensive-programming-specialist.md  rust-documentation-quality-reviewer.md  rust-systems-performance-specialist.md  rust-unsafe-code-auditor.md  rust-webassembly-frontend-specialist.md  sql-database-engineer.md  tdd-driver.md  tdd-navigator.md  (+5 more)
competitor_spy_adapters/: Cargo.toml
competitor_spy_adapters/src/: adapter.rs  google_places.rs  lib.rs  nominatim.rs  osm_overpass.rs  pacing.rs  registry.rs  yelp.rs
competitor_spy_cli/: Cargo.toml
competitor_spy_cli/src/: main.rs  runner.rs
competitor_spy_cli/tests/: acceptance.rs
competitor_spy_credentials/src/: store.rs
competitor_spy_domain/: Cargo.toml
competitor_spy_domain/src/: lib.rs  normalizer.rs  profile.rs  query.rs  ranking.rs  run.rs  scoring.rs
competitor_spy_output/: Cargo.toml
competitor_spy_output/src/: lib.rs  pdf.rs  terminal.rs
competitor_spy_telemetry/: Cargo.toml
competitor_spy_telemetry/src/: init.rs  lib.rs  redact.rs
docs/: ADMIN_GUIDE.md  DEVELOPER_GUIDE.md
docs/adr/: ADR-001-rust-cargo-workspace.md  ADR-002-tokio-async-runtime.md  ADR-003-source-adapter-trait.md  ADR-004-printpdf-pure-rust.md  ADR-005-age-credential-encryption.md  ADR-006-cli-lib-bin-layout.md
docs/evidence/: environment-matrix.md  release-remote-proof.md  traceability.md
docs/evidence/sessions/: .gitkeep
governance/: 00_INTERACTION_GUARDRAILS.md  07_QUALITY_DIMENSIONS.md  CHANGELOG.md  DELIVERABLES_MANIFEST.md  FORMAL_SPEC.md  GETTING_STARTED.md  OPERATIONS_AND_ROLLBACK.md  PROJECT_BRIEF.md  RELEASE_CHECKLIST.md  TASK_LIST.md  memory.md  prompts.md
governance/agents/: rust-security-auditor.md
governance/templates/: DELIVERABLES_MANIFEST_TEMPLATE.md  feedback.json
scripts/: capture_session.ps1  capture_session.sh  idle-guard.ps1  idle-guard.sh  setup_google_places.ps1
src/competitor_spy_adapters/: Cargo.toml
src/competitor_spy_adapters/src/: google_places.rs  lib.rs  pacing.rs  registry.rs  web_enricher.rs
src/competitor_spy_adapters/src/extractors/: class_descriptions.rs  lesson_types.rs  mod.rs  pricing.rs  schedule.rs  testimonials.rs
src/competitor_spy_cli/: Cargo.toml
src/competitor_spy_cli/src/: lib.rs  main.rs  runner.rs
src/competitor_spy_cli/tests/: acceptance.rs  security.rs
src/competitor_spy_credentials/: Cargo.toml
src/competitor_spy_credentials/src/: lib.rs  store.rs
src/competitor_spy_domain/src/: enrichment.rs  lib.rs  query.rs  ranking.rs  run.rs  scoring.rs
src/competitor_spy_output/: Cargo.toml
src/competitor_spy_output/src/: pdf.rs  terminal.rs
src/competitor_spy_telemetry/src/: init.rs  lib.rs
src/competitor_spy_telemetry/tests/: pipeline.rs
templates/: DELIVERABLES_MANIFEST_TEMPLATE.md  FORMAL_SPEC_TEMPLATE.md  IMPLEMENTATION_CHRONICLE_TEMPLATE.md  PROJECT_BRIEF_TEMPLATE.md  TASK_LIST_TEMPLATE.md  feedback.json
