[package]
name = "competitor_spy_adapters"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
competitor_spy_domain = { path = "../competitor_spy_domain" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true }
