[package]
name = "competitor_spy_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "competitor-spy"
path = "src/main.rs"

[lib]
name = "competitor_spy_cli"
path = "src/lib.rs"

[dependencies]
competitor_spy_domain = { path = "../competitor_spy_domain" }
competitor_spy_adapters = { path = "../competitor_spy_adapters" }
competitor_spy_output = { path = "../competitor_spy_output" }
competitor_spy_credentials = { path = "../competitor_spy_credentials" }
competitor_spy_telemetry = { path = "../competitor_spy_telemetry" }
clap = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
rpassword = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
