[package]
name = "competitor_spy_output"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
competitor_spy_domain = { path = "../competitor_spy_domain" }
printpdf = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
