[package]
name = "competitor_spy_credentials"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
age = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
